--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.dell.sixlive"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -19,26 +19,36 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    compile 'io.reactivex.rxjava2:rxjava:2.0.2'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-    compile 'com.squareup.okhttp3:okhttp:3.3.1'
-    compile 'com.squareup.okio:okio:1.8.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.3.1'
+    implementation 'com.squareup.okio:okio:1.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
-    compile 'com.hjm:BottomTabBar:1.1.1'
-    compile 'com.youth.banner:banner:1.4.9'
-    compile 'com.facebook.fresco:fresco:0.11.0'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    implementation 'com.hjm:BottomTabBar:1.1.1'
+    implementation 'com.youth.banner:banner:1.4.9'
+    implementation 'com.facebook.fresco:fresco:0.11.0'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
+    implementation 'com.xhb:xbanner:1.2.2'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    //ijkplayer
+    //implementation 'com.shuyu:gsyVideoPlayer-java:5.0.0-beta'
+    implementation 'com.shuyu:GSYVideoPlayer:5.0.0-beta'
+    implementation 'com.android.support:design:26.0.0-alpha1'
+
 }
